fix(scrollburglars): hidden overflow-x on .main-article

--- a/03-blog-example/assets/style.css
+++ b/03-blog-example/assets/style.css
@@ -69,6 +69,7 @@ a {
 }
 
 .main-article {
+  overflow-x: hidden;
   padding: 0 12px;
 }
 
